--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
         Add your email below to stay up-to-date with announcements and our launch deals.</p>
 
       <form action="#" class="flex-form">
-        <input type="email" placeholder="Email Address" name="email" id="emai'">
-        <button type="submit">
-          <img src="./images/icon-arrow.svg" alt="" srcset="">
+        <input type="email" placeholder="Email Address" name="email" id="email">
+          <img src="./images/icon-error.svg" alt="error-icon" class="error-icon none">
+        <button type="submit" class="btn">
+          <img src="./images/icon-arrow.svg" alt="arrow-image" srcset="">
         </button>
+        <span class="error-text none"> Please provide a valid email</span>
       </form>
     
       
@@ -57,10 +59,11 @@
 
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> 
+      To see my code here <a href="#">Danny Chen</a>
     </p>
   </footer>
 
+  <script src="./index.js" defer></script>
 </body>
 </html>
