Update footer github

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> 
-      To see my code here <a href="#">Danny Chen</a>
+      To see my code here <a href="https://github.com/dcdanny945/Apparel-coming-soon">Danny Chen</a>
     </p>
   </footer>
 
